- more rune stuff
- fixed achievement loading