@@ -45,7 +45,7 @@ namespace WCell.RealmServer.Spells
 		public static int PushbackDelay = 500;
 		public static int ChannelPushbackFraction = 4;
 
-		static readonly ObjectPool<SpellCast> SpellCastPool = ObjectPoolMgr.CreatePool(() => new SpellCast(), true);
+		internal static readonly ObjectPool<SpellCast> SpellCastPool = ObjectPoolMgr.CreatePool(() => new SpellCast(), true);
 		public static readonly ObjectPool<List<IAura>> AuraListPool = ObjectPoolMgr.CreatePool(() => new List<IAura>(), true);
 		public static readonly ObjectPool<List<CastMiss>> CastMissListPool = ObjectPoolMgr.CreatePool(() => new List<CastMiss>(3), true);
 		public static readonly ObjectPool<List<SpellEffectHandler>> SpellEffectHandlerListPool = ObjectPoolMgr.CreatePool(() => new List<SpellEffectHandler>(3), true);
@@ -430,6 +430,14 @@ namespace WCell.RealmServer.Spells
 		}
 
 		/// <summary>
+		/// Whether this SpellCast is waiting to be casted on next strike
+		/// </summary>
+		public bool IsPending
+		{
+			get { return m_casting && m_spell.IsOnNextStrike; }
+		}
+
+		/// <summary>
 		/// Returns all targets that this SpellCast initially had
 		/// </summary>
 		public WorldObject[] InitialTargets
@@ -794,83 +802,124 @@ namespace WCell.RealmServer.Spells
 
 		private SpellFailedReason Prepare()
 		{
-			//var stopwatch = Stopwatch.StartNew();
-			if (Selected == null && CasterUnit != null)
+			if (m_spell == null)
 			{
-				if (m_initialTargets != null)
-				{
-					Selected = m_initialTargets[0];
-				}
-				else
-				{
-					Selected = CasterUnit.Target;
-				}
+				LogManager.GetCurrentClassLogger().Warn("{0} tried to cast without selecting a Spell.", CasterObject);
+				return SpellFailedReason.Error;
 			}
 
-			if (!m_passiveCast && !m_spell.IsPassive && CasterUnit != null)
+			try
 			{
-				var spell = m_spell;
-
-				if (!spell.Attributes.HasFlag(SpellAttributes.CastableWhileMounted))
+				//var stopwatch = Stopwatch.StartNew();
+				if (Selected == null && CasterUnit != null)
 				{
-					// don't sit on a ride (even if you try to, the Client will show you dismounted - maybe add auto-remount for GodMode)
-					CasterUnit.Dismount();
-				}
-
-				// make sure, the Caster is standing
-				if (!spell.Attributes.HasFlag(SpellAttributes.CastableWhileSitting))
-				{
-					CasterUnit.StandState = StandState.Stand;
-				}
-
-				if (!GodMode && !m_passiveCast && CasterUnit.IsPlayer)
-				{
-					// check whether we may cast at all for Characters (NPC check before casting)
-					var failReason = CheckPlayerCast(Selected);
-					if (failReason != SpellFailedReason.Ok)
+					if (m_initialTargets != null)
 					{
-						Cancel(failReason);
-						return failReason;
+						Selected = m_initialTargets[0];
+					}
+					else
+					{
+						Selected = CasterUnit.Target;
+					}
+				}
+
+				if (!m_passiveCast && !m_spell.IsPassive && CasterUnit != null)
+				{
+					var spell = m_spell;
+
+					if (!spell.Attributes.HasFlag(SpellAttributes.CastableWhileMounted))
+					{
+						// don't sit on a ride (even if you try to, the Client will show you dismounted - maybe add auto-remount for GodMode)
+						CasterUnit.Dismount();
 					}
 
-					// remove certain Auras
-					CasterUnit.Auras.RemoveByFlag(AuraInterruptFlags.OnCast);
+					// make sure, the Caster is standing
+					if (!spell.Attributes.HasFlag(SpellAttributes.CastableWhileSitting))
+					{
+						CasterUnit.StandState = StandState.Stand;
+					}
+
+					if (!GodMode && !m_passiveCast && CasterUnit.IsPlayer)
+					{
+						// check whether we may cast at all for Characters (NPC check before casting)
+						var failReason = CheckPlayerCast(Selected);
+						if (failReason != SpellFailedReason.Ok)
+						{
+							Cancel(failReason);
+							return failReason;
+						}
+
+						// remove certain Auras
+						CasterUnit.Auras.RemoveByFlag(AuraInterruptFlags.OnCast);
+					}
 				}
-			}
 
-			m_startTime = Environment.TickCount;
-			m_castDelay = (int)m_spell.CastDelay;
+				m_startTime = Environment.TickCount;
+				m_castDelay = (int) m_spell.CastDelay;
 
-			if (!IsInstant)
-			{
-				// calc exact cast delay
-				if (CasterUnit != null)
+				if (!IsInstant)
 				{
-					m_castDelay = (CasterUnit.CastSpeedFactor*m_castDelay).RoundInt();
-					m_castDelay = CasterChar.Auras.GetModifiedInt(SpellModifierType.CastTime, m_spell, m_castDelay);
+					// calc exact cast delay
+					if (CasterUnit != null)
+					{
+						m_castDelay = (CasterUnit.CastSpeedFactor*m_castDelay).RoundInt();
+						m_castDelay = CasterUnit.Auras.GetModifiedInt(SpellModifierType.CastTime, m_spell, m_castDelay);
+					}
 				}
-			}
 
-			if (m_spell.TargetLocation != null)
+				if (m_spell.TargetLocation != null)
+				{
+					TargetLoc = m_spell.TargetLocation.Position;
+				}
+
+				// Notify that we are about to cast
+				return m_spell.NotifyCasting(this);
+			}
+			catch (Exception e)
 			{
-				TargetLoc = m_spell.TargetLocation.Position;
+				OnException(e);
+				return SpellFailedReason.Error;
 			}
-
-			// Notify that we are about to cast
-			return m_spell.NotifyCasting(this);
 		}
 
 		SpellFailedReason FinishPrepare()
 		{
-			if (!IsInstant)
+			try
 			{
-				// send Start packet
-				SendCastStart();
-				m_castTimer.Start(m_castDelay);
-				return SpellFailedReason.Ok;
-			}
+				if (!IsInstant)
+				{
+					// send Start packet
+					SendCastStart();
+					m_castTimer.Start(m_castDelay);
+					return SpellFailedReason.Ok;
+				}
 
-			return Perform();
+				if (m_spell.IsOnNextStrike)
+				{
+					// perform on next strike
+					if (!(CasterObject is Unit))
+					{
+						Cancel();
+						return SpellFailedReason.Error;
+					}
+
+					CasterUnit.SetSpellCast(this);
+
+					// send Start packet
+					SendCastStart();
+					return SpellFailedReason.Ok;
+
+				}
+				else
+				{
+					return Perform();
+				}
+			}
+			catch (Exception e)
+			{
+				OnException(e);
+				return SpellFailedReason.Error;
+			}
 		}
 
 		/// <summary>
@@ -1197,6 +1246,14 @@ namespace WCell.RealmServer.Spells
 		private void OnException(Exception e)
 		{
 			LogUtil.ErrorException(e, "{0} failed to cast Spell {1} (Targets: {2})", CasterObject, Spell, Targets.ToString(", "));
+			if (CasterObject != null && !CasterObject.IsPlayer)
+			{
+				CasterObject.Delete();
+			}
+			else if (Client != null)
+			{
+				Client.Disconnect();
+			}
 			if (IsCasting)
 			{
 				Cleanup(true);
